# zdash

./: .env.example  .gitignore  AGENTS.md  COMMUNITY.md  CONTRIBUTING.md  FULL_REVIEW.md  Makefile  README.md  apply-router-and-useapi-fix.sh  commit_095.sh  docker-compose.prod.yml  docker-compose.yml  gh-set-env.sh  gpg-loopback.sh  install-zdash-fullstack.sh  validate.sh  validate_092.sh  validate_093.sh  validate_094.sh  validate_095.sh  validate_backend_092.sh  zdash.json
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260524_0003_phase8_persistence.py  7054888e2a84_phase10_models.py
backend/app/: main.py
backend/app/agents/: base.py  ceo.py  editor.py  friday.py  graphic.py  guardian.py  janie.py  joe.py  registry.py  social.py
backend/tests/: conftest.py  test_agent_runtime.py  test_ai_mock_fallback.py  test_ai_trader_phase34.py  test_ceo_janie_flow.py  test_collaboration_api.py  test_drawdown_guard.py  test_dry_run_execution.py  test_execution_blocked_by_risk.py  test_friday_agent.py  test_funnel_filter.py  test_guardian_service.py  test_halt_flag.py  test_health.py  test_iot_service.py  test_kill_switch.py  test_mt5_adapter_mock.py  test_phase10.py  test_predictive_sre_models.py  test_presence.py  test_realtime_bus.py  test_risk_api.py  test_scheduler_api.py  test_scheduler_models.py  test_scheduler_risk_integration.py  test_scheduler_service.py  test_signal_validation.py  test_tapo_adapter_dry_run.py  test_timeline.py  test_trading_api.py  test_trading_models.py  test_xau_scanner.py
(+672 files in other folders)
